# NumerikAufgaben

./: .gitignore
blatt1/: aufgabe_6.c
blatt6/: CMakeLists.txt
blatt6/include/: HouseQR.h  LinAusHouse.h  helper.h
blatt6/src/: HouseQR.c  LinAusHouse.c  helper.c  vorrueckwaertsub.c
blatt6/test/: HouseQRTest.c  LinAusHouseTest.c  helperTest.c  problem4.c
blatt9/: CMakeLists.txt
blatt9/include/: Broyden.h  helper.h
blatt9/src/: Broyden.c  helper.c
blatt9/test/: BroydenTest.c  helperTest.c  problem2.c  problem3.c
pde/problem1/: FDM_heat.py  Problem_ii.m  Problem_iii.m  problem_ii.py  problem_iii.py  solve_heat_equation.m
pde/problem10/: extract_mesh.m  plot_mesh.m  sheet10_prob1_mesh.txt  test_mesh.txt  tests.m
pde/problem11/: L-shape.txt  equidist.txt  extract_mesh.m  helper1.m  helper2.m  plot_solution.m  solve_poisson_equation.m  tests.m
pde/problem2/: helper.m  plot_u.m  plot_u_derivatives.m  problem_iii.m
pde/problem3/: helper.m  helper_test.m  problem_iii.m  problem_iv.m  solve_poisson_equation.m
pde/problem4/: convection_test.m  problem_ii.m  solve_convection_central.m  solve_convection_upstream.m
